gap fix

--- a/public/home2.css
+++ b/public/home2.css
@@ -398,7 +398,7 @@ a{
         height:60%;
     }
     .flexGroup{
-        gap:10px;
+        gap:5px;
     }
 }
 
